--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@tailwindcss/vite": "^4.2.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.575.0",
     "react": "^18.3.1",
